--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <a class = "nav-link" href = "#"> Home </a>
                             </li>
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#productAnch"> Products </a>
+                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html"> Products </a>
                             </li>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "#"> Stores </a>
@@ -263,7 +263,7 @@
                 </div>
 
                 <div class = "row justify-content-center">
-                    <a class = "link-button view-all" href = "#">
+                    <a class = "link-button view-all" href = "/Willows-Reef-Mock-Up/products-page.html">
                         View All
                     </a>
                 </div>
