--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <nav class = "navbar navbar-expand-lg">
                 <div class = "container-fluid">
                    
-                    <a href = "#" class = "logo-link">
+                    <a href = "/Willows-Reef-Mock-Up" class = "logo-link">
                         <img id = "siteLogo" alt = "Willow's Reef | Home" src = "images/png/willows-reef-icon.png">
                         <span class = "logo-link-text">
                             Willow's Reef
@@ -68,10 +68,10 @@
                     <div class = "collapse" id = "mobileNav">
                         <ul class = "navbar-nav">
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> Home </a>
+                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up"> Home </a>
                             </li>
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#productAnch"> Products </a>
+                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html"> Products </a>
                             </li>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "#"> Stores </a>
@@ -112,7 +112,7 @@
                     <div class = "" id = "desktopNav">
                         <ul class = "navbar-nav align-items-center">
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> Home </a>
+                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up"> Home </a>
                             </li>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html"> Products </a>
