--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html"> Products </a>
                             </li>
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> Stores </a>
+                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/stores-page.html"> Stores </a>
                             </li>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "#"> Media </a>
@@ -118,7 +118,7 @@
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html"> Products </a>
                             </li>
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> Stores </a>
+                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/stores-page.html"> Stores </a>
                             </li>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "#"> Media </a>
