--- a/products-page.html
+++ b/products-page.html
@@ -63,10 +63,10 @@
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up"> Home </a>
                             </li>
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> Products </a>
+                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html"> Products </a>
                             </li>
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> Stores </a>
+                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/stores-page.html"> Stores </a>
                             </li>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "#"> Media </a>
@@ -110,7 +110,7 @@
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html"> Products </a>
                             </li>
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> Stores </a>
+                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/stores-page.html"> Stores </a>
                             </li>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "#"> Media </a>
