--- a/stores-page.html
+++ b/stores-page.html
@@ -4,7 +4,7 @@
 <html lang = "en">
     <head>
         <meta charset = "UTF-8">
-        <title>Willow's Reef | Store Locations</title>
+        <title>Willow's Reef | Stores</title>
         <link rel = "shortcut icon" type = "image/ico" href = "images/ico/favicon.ico"/>
         <meta name = "viewport" content = "width = device-width, initial-scale = 1">
         
@@ -132,7 +132,7 @@
             <div id = "screenOverlay">&nbsp;</div>
 
             <div id = "storeSection" class = "container-fluid mt-3">
-                <h2 class = "section-header">Store Locations</h2>
+                <h2 class = "section-header">Stores</h2>
                 <div class = "row justify-content-center text-center mt-3">
                     <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
                     <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
