--- a/coral-feast.html
+++ b/coral-feast.html
@@ -137,7 +137,7 @@
                         <img src = "../Willow's Reef Website Mockup/images/png/compressed-product-images/coral-feast-prd.png" alt = "Coral Feast">
                     </div>
                     <div class = "col-md-6 item-descript">
-                        <h2 class = "section-header text-start">Coral Feast</h2>
+                        <h2 class = "section-header">Coral Feast</h2>
 
                         <b>Coral Feast</b> is formulated to help promote your corals' best growth 
                         and color and is made with 100% all-natural aquatic ingredients. 
