--- a/amino-feast.html
+++ b/amino-feast.html
@@ -4,7 +4,7 @@
 <html lang = "en">
     <head>
         <meta charset = "UTF-8">
-        <title>Willow's Reef | AminoFeast</title>
+        <title>Willow's Reef | AminoFeast+</title>
         <link rel = "shortcut icon" type = "image/ico" href = "images/ico/favicon.ico"/>
         <meta name = "viewport" content = "width = device-width, initial-scale = 1">
         
