--- a/amino-feast.html
+++ b/amino-feast.html
@@ -134,7 +134,7 @@
             <div id = "productSection" class = "container-fluid">
                 <div class = "row justify-content-center product-descript-container">
                     <div class = "col-md-6">
-                        <img src = "../Willow's Reef Website Mockup/images/png/compressed-product-images/amino-feast-prd.png" alt = "Coral Feast">
+                        <img src = "../Willow's Reef Website Mockup/images/png/compressed-product-images/amino-feast-prd.png" alt = "AminoFeast+">
                     </div>
                     <div class = "col-md-6 item-descript">
                         <h2 class = "section-header">AminoFeast+</h2>
