--- a/rhodo-feast.html
+++ b/rhodo-feast.html
@@ -133,8 +133,8 @@
 
             <div id = "productSection" class = "container-fluid">
                 <div class = "row justify-content-center product-descript-container">
-                    <div class = "col-md-6">
-                        <img src = "../Willow's Reef Website Mockup/images/png/compressed-product-images/rhodo-feast-prd.png" alt = "RhodoFeast">
+                    <div class = "col-md-6 rhodo-feast-col">
+                        <!--<img src = "../Willow's Reef Website Mockup/images/png/compressed-product-images/rhodo-feast-prd.png" alt = "RhodoFeast">-->
                     </div>
                     <div class = "col-md-6 item-descript">
                         <h2 class = "section-header">RhodoFeast</h2>
