--- a/amino-feast.html
+++ b/amino-feast.html
@@ -133,8 +133,8 @@
 
             <div id = "productSection" class = "container-fluid">
                 <div class = "row justify-content-center product-descript-container">
-                    <div class = "col-md-6">
-                        <img src = "../Willow's Reef Website Mockup/images/png/compressed-product-images/amino-feast-prd.png" alt = "AminoFeast+">
+                    <div class = "col-md-6 amino-feast-col">
+                        <!--<img src = "../Willow's Reef Website Mockup/images/png/compressed-product-images/amino-feast-prd.png" alt = "AminoFeast+">-->
                     </div>
                     <div class = "col-md-6 item-descript">
                         <h2 class = "section-header">AminoFeast+</h2>
