--- a/amino-feast.html
+++ b/amino-feast.html
@@ -4,7 +4,7 @@
 <html lang = "en">
     <head>
         <meta charset = "UTF-8">
-        <title>Willow's Reef | AminoFeast+</title>
+        <title>Willow's Reef | Coral Feast</title>
         <link rel = "shortcut icon" type = "image/ico" href = "images/ico/favicon.ico"/>
         <meta name = "viewport" content = "width = device-width, initial-scale = 1">
         
@@ -133,15 +133,16 @@
 
             <div id = "productSection" class = "container-fluid">
                 <div class = "row justify-content-center product-descript-container">
-                    <div class = "col-md-6 amino-feast-col">
-                        <!--<img src = "../Willow's Reef Website Mockup/images/png/compressed-product-images/amino-feast-prd.png" alt = "AminoFeast+">-->
+                    <div class = "col-md-6 coral-feast-col">
+                        <!--<img src = "../Willow's Reef Website Mockup/images/png/compressed-product-images/coral-feast-prd.png" alt = "Coral Feast">-->
                     </div>
                     <div class = "col-md-6 item-descript">
-                        <h2 class = "section-header">AminoFeast+</h2>
+                        <h2 class = "section-header">Coral Feast</h2>
 
-                        <b>AminoFeast+</b> is a blend of 8 amino acids with an all-natural buffer of potassium which is 
-                        something that corals utilize. Our #1 goal was to bring an additive to our food line that helps 
-                        your corals THRIVE while having as little negative impact on your ecosystem as possible.
+                        <b>Coral Feast</b> is formulated to help promote your corals' best growth 
+                        and color and is made with 100% all-natural aquatic ingredients. 
+                        There are no fillers of ANY kind like corn starch, flours, yeasts, 
+                        fish protein powder, garlic powder, or bioenhancers.
                         <br><br>
 
                         <a href = "/Willows-Reef-Mock-Up/stores-page.html" class = "link-button">
@@ -152,50 +153,72 @@
 
                 <h2 class = "section-header">Product Description</h2>
                 <div class = "full-descript">
-                    AminoFeast+ is a blend of 8 amino acids with an all-natural buffer of potassium which is something that 
-                    corals utilize. Our #1 goal was to bring an additive to our food line that helps your corals THRIVE while 
-                    having as little negative impact on your ecosystem as possible.
+                    CoralFeast is made with nine all-natural 100% aquatic ingredients to help promote your corals' best 
+                    growth and color. There are no fillers of ANY kind like corn starch, flours, yeasts, fish protein 
+                    powder, garlic powder, or bioenhancers.
                     <br><br>
-                    Aminofeast+ is Free of all dyes and bad odors. No refrigeration is required, and it can be dosed at 1mil per 20 
-                    gallons 1 to 2 times per day. For ideal conditions, we recommend regular testing and observation so you can adjust 
-                    dosing based on your specific ecosystem’s parameters to keep a stable and thriving reef. If you do not dose, no 
-                    worries, just add 1mil per 20 gallons to your feeding schedule of frozen and or coral foods.
+                    CoralFeast is milled in an FDA-certified factory. It is milled and sifted with a 300-micron screen, 
+                    leaving a 300 to 500-micron particle size, making this ideal for all NPS, LPS, and SPS coral. It is 
+                    also ideal for sponges and clams. The size aids in the digestion for maximum nutrient absorption. More 
+                    absorption, less excrement.
                     <br><br>
-
+                    The milling removes all impurities, making it cleaner than any other coral food currently on the market. 
+                    For best results: Add a high-quality amino acid-like AminoFeast+ and a probiotic to a container and mix 
+                    thoroughly. We also recommend adding CoralFeast as an ingredient when you feed frozen food, as this will 
+                    boost the overall nutrition and help with the appetite for picky fish.
+                    <br><br>
+                    In our opinion, fillers are not needed. Of course, it costs more to produce, but we were unwilling to take 
+                    any shortcuts when we decided to make a quality coral food. CoralFeast is made with what we would want to 
+                    put into my tank. You spend $100s to $1,000s on your aquarium with lights, skimmers, dosing units, pumps, 
+                    and of course, coral and fish. Why not feed them the best coral food?
+                    <br><br>
                     <b>Ingredients:</b>
                     <ul class = "ingredient-list">
                         <li>
-                            R.O Water
+                            Whole Krill
                         </li>
                         <li>
-                            Aspartic Acid
+                            Freeze Dried Rotifers
                         </li>
                         <li>
-                            Glutamic Acid
+                            Arctic Copepods
                         </li>
                         <li>
-                            Glutamine
+                            Whole Brine Shrimp
                         </li>
                         <li>
-                            Leucine
+                            Apocalypse Royi
                         </li>
                         <li>
-                            Glycine
+                            Spirulina Powder
                         </li>
                         <li>
-                            Valine
+                            Porphyra umbilicalis
                         </li>
                         <li>
-                            Proline
+                            Palmaria palmata
                         </li>
                         <li>
-                            Sodium bicarbonate
+                            Ulva lactuca
+                        </li>
+                        <br>
+                        <li>
+                            Crude Protein 55.3%
                         </li>
                         <li>
-                            Potassium sorbate
+                            Crude Fat 15.5%
                         </li>
                         <li>
-                            Potassium hydroxide
+                            Crude fiber 8.28%
+                        </li>
+                        <li>
+                            Crude lipid 12%
+                        </li>
+                        <li>
+                            Min Moisture 7.95%
+                        </li>
+                        <li>
+                            Ash 9.58%
                         </li>
                     </ul>
                 </div>
