--- a/coral-feast.html
+++ b/coral-feast.html
@@ -133,8 +133,8 @@
 
             <div id = "productSection" class = "container-fluid">
                 <div class = "row justify-content-center product-descript-container">
-                    <div class = "col-md-6">
-                        <img src = "../Willow's Reef Website Mockup/images/png/compressed-product-images/coral-feast-prd.png" alt = "Coral Feast">
+                    <div class = "col-md-6 coral-feast-col">
+                        <!--<img src = "../Willow's Reef Website Mockup/images/png/compressed-product-images/coral-feast-prd.png" alt = "Coral Feast">-->
                     </div>
                     <div class = "col-md-6 item-descript">
                         <h2 class = "section-header">Coral Feast</h2>
