--- a/products-page.html
+++ b/products-page.html
@@ -149,7 +149,7 @@
                             It is made with 100% natural ingredients with no fillers.
                         </div>
 
-                        <a class = "link-button mt-auto" href = "#">
+                        <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/coral-feast.html">
                             Learn More
                         </a>
                     </div>
@@ -167,7 +167,7 @@
                             which is something that corals utilize. 
                         </div>
 
-                        <a class = "link-button mt-auto" href = "#">
+                        <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/amino-feast.html">
                             Learn More
                         </a>
                     </div>
@@ -185,7 +185,7 @@
                             This is a live probiotic. 
                         </div>
                         
-                        <a class = "link-button mt-auto" href = "#">
+                        <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/rhodo-feast.html">
                             Learn More
                         </a>
                     </div>
@@ -208,7 +208,7 @@
                             can reach out to them directly. 
                         </div>
 
-                        <a class = "link-button mt-auto" href = "#">
+                        <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/frozen-feast.html">
                             Learn More
                         </a>
                     </div>
