--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                             It is made with 100% natural ingredients with no fillers.
                         </div>
 
-                        <a class = "link-button mt-auto" href = "#">
+                        <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/coral-feast.html">
                             Learn More
                         </a>
                     </div>
@@ -238,7 +238,7 @@
                             which is something that corals utilize. 
                         </div>
 
-                        <a class = "link-button mt-auto" href = "#">
+                        <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/amino-feast.html">
                             Learn More
                         </a>
                     </div>
@@ -256,7 +256,7 @@
                             This is a live probiotic. 
                         </div>
                         
-                        <a class = "link-button mt-auto" href = "#">
+                        <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/rhodo-feast.html">
                             Learn More
                         </a>
                     </div>
