--- a/stores-page.html
+++ b/stores-page.html
@@ -72,7 +72,7 @@
                                 <a class = "nav-link" href = "#"> Media </a>
                             </li>
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> About Us </a>
+                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/about-page.html"> About Us </a>
                             </li>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "#contactAnch"> Contact Us </a>
@@ -116,7 +116,7 @@
                                 <a class = "nav-link" href = "#"> Media </a>
                             </li>
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> About Us </a>
+                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/about-page.html"> About Us </a>
                             </li>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "#contactAnch"> Contact Us </a>
@@ -131,7 +131,7 @@
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
-            <div id = "storeSection" class = "container-fluid mt-3">
+            <div id = "storeSection" class = "container-fluid mt-4">
                 <h2 class = "section-header">Stores</h2>
                 <div class = "row justify-content-center text-center mt-3">
                     <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
