--- a/index.html
+++ b/index.html
@@ -48,14 +48,6 @@
                         <span class = "logo-link-text">
                             Willow's Reef
                         </span>
-                        
-                        <!--
-                        <picture>
-                            <source media = "(min-width: 992px)" srcset = "images/png/placeholder-logo-2.png"> 
-                            <source media = "" srcset = "images/png/placeholder-logo-2-m.png">
-                            <img src = "images/png/placeholder-logo-2.png" alt = "Willow's Reef Logo" id = "siteLogo"> 
-                        </picture>
-                        -->
                     </a>
 
                     <button class = "hamburger navbar-toggler" type = "button" data-bs-toggle = "collapse" data-bs-target = "#mobileNav" aria-controls = "mobileNav" aria-expanded = "false" aria-label = "Toggle mobile navigation">
@@ -80,7 +72,7 @@
                                 <a class = "nav-link" href = "#"> Media </a>
                             </li>
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> About Us </a>
+                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/about-page.html"> About Us </a>
                             </li>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "#contactAnch"> Contact Us </a>
@@ -124,7 +116,7 @@
                                 <a class = "nav-link" href = "#"> Media </a>
                             </li>
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> About Us </a>
+                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/about-page.html"> About Us </a>
                             </li>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "#contactAnch"> Contact Us </a>
