--- a/stores-page.html
+++ b/stores-page.html
@@ -134,24 +134,24 @@
             <div id = "storeSection" class = "container-fluid mt-4">
                 <h2 class = "section-header">Stores</h2>
                 <div class = "row justify-content-center text-center mt-3">
-                    <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
                 </div>
 
                 <div class = "row justify-content-center text-center mt-3">
-                    <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
                 </div>
 
                 <div class = "row justify-content-center text-center mt-3">
-                    <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
                 </div>
             </div>
             <span class = "anchor" id = "contactAnch">&nbsp;</span>
