--- a/stores-page.html
+++ b/stores-page.html
@@ -133,25 +133,25 @@
 
             <div id = "storeSection" class = "container-fluid mt-4">
                 <h2 class = "section-header">Stores</h2>
-                <div class = "row justify-content-center text-center mt-3">
-                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
+                <div class = "row justify-content-center text-center">
+                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
                 </div>
 
-                <div class = "row justify-content-center text-center mt-3">
-                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
+                <div class = "row justify-content-center text-center">
+                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
                 </div>
 
-                <div class = "row justify-content-center text-center mt-3">
-                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-md-3"><a href = "" target = _blank>Store Name</a></span>
+                <div class = "row justify-content-center text-center">
+                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
                 </div>
             </div>
             <span class = "anchor" id = "contactAnch">&nbsp;</span>
