--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         to grow the hobby and to provide top-quality products to people like us!
                     </div>
 
-                    <a href = "#" class = "link-button">
+                    <a href = "/Willows-Reef-Mock-Up/about-page.html" class = "link-button">
                         Learn More
                     </a>
                 </div>
