--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         </a>
                         Tag us in your posts <b>@WillowsReef</b> or <b>#coralfeast</b>
 
-                        <a href = "#" class = "link-button">
+                        <a href = "/Willows-Reef-Mock-Up/community-images.html" class = "link-button">
                             View More
                         </a>
                     </div>
