--- a/feeding-vids.html
+++ b/feeding-vids.html
@@ -157,26 +157,23 @@
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
-            <div id = "aboutSection" class = "container-fluid">
-                <div class = "row justify-content-center mt-4">
-                    <h2 class = "section-header">PLACEHOLDER PAGE</h2>
-                    
-                    <div class = "about-info">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu vitae elementum curabitur vitae nunc sed velit dignissim. Sodales neque sodales ut etiam sit amet nisl purus. Enim facilisis gravida neque convallis a. Quis commodo odio aenean sed. Natoque penatibus et magnis dis parturient montes nascetur. Venenatis cras sed felis eget velit aliquet sagittis id. Et molestie ac feugiat sed lectus vestibulum. Turpis in eu mi bibendum neque. Lobortis scelerisque fermentum dui faucibus in.
-                        <br><br>
-                        In eu mi bibendum neque egestas congue quisque egestas diam. Massa sapien faucibus et molestie ac. Justo laoreet sit amet cursus sit amet dictum sit. Cursus in hac habitasse platea dictumst quisque sagittis purus sit. Pretium quam vulputate dignissim suspendisse in est. Semper auctor neque vitae tempus. Sem integer vitae justo eget. Convallis a cras semper auctor neque vitae tempus. Aliquet nibh praesent tristique magna sit. Pellentesque habitant morbi tristique senectus et. Ac tortor dignissim convallis aenean et tortor at. Nunc pulvinar sapien et ligula ullamcorper. Nulla facilisi morbi tempus iaculis urna id volutpat lacus.
-                        <br><br>
-                        Quis varius quam quisque id diam vel. Sed tempus urna et pharetra pharetra massa massa ultricies. Augue eget arcu dictum varius duis at. Et sollicitudin ac orci phasellus. Platea dictumst vestibulum rhoncus est. Senectus et netus et malesuada fames ac turpis egestas maecenas. Nulla pharetra diam sit amet nisl suscipit adipiscing bibendum est. Eget sit amet tellus cras adipiscing enim eu turpis egestas. Semper viverra nam libero justo. Facilisi nullam vehicula ipsum a arcu cursus vitae. Sem nulla pharetra diam sit amet nisl suscipit adipiscing bibendum. Nec ultrices dui sapien eget mi proin sed libero. A lacus vestibulum sed arcu non odio euismod. At tempor commodo ullamcorper a lacus vestibulum sed arcu non. Nulla malesuada pellentesque elit eget gravida cum sociis. Rhoncus urna neque viverra justo nec ultrices dui sapien eget. Tincidunt id aliquet risus feugiat in ante. Neque viverra justo nec ultrices dui sapien.
-                        <br><br>
-                        Nunc vel risus commodo viverra maecenas accumsan lacus vel facilisis. Turpis tincidunt id aliquet risus feugiat in ante. Facilisi morbi tempus iaculis urna id volutpat lacus. In ornare quam viverra orci sagittis eu. Sed viverra ipsum nunc aliquet bibendum enim facilisis. Nisl condimentum id venenatis a condimentum vitae sapien pellentesque. Vestibulum lectus mauris ultrices eros in. Adipiscing enim eu turpis egestas pretium aenean. Gravida neque convallis a cras semper. Viverra mauris in aliquam sem. Amet commodo nulla facilisi nullam vehicula ipsum a arcu. Cras sed felis eget velit. Imperdiet sed euismod nisi porta lorem mollis. Feugiat nibh sed pulvinar proin gravida hendrerit lectus a. Nunc scelerisque viverra mauris in aliquam sem fringilla ut. Et malesuada fames ac turpis egestas maecenas pharetra convallis posuere.
-                        <br><br>
-                        Eget gravida cum sociis natoque penatibus et magnis dis parturient. Sit amet commodo nulla facilisi nullam vehicula ipsum a arcu. Mi proin sed libero enim sed. Posuere urna nec tincidunt praesent semper. Sed sed risus pretium quam vulputate dignissim suspendisse in est. Lectus sit amet est placerat in egestas erat. Risus viverra adipiscing at in tellus integer feugiat scelerisque varius. Laoreet id donec ultrices tincidunt arcu non sodales. Lectus sit amet est placerat in. Ultrices gravida dictum fusce ut placerat orci nulla pellentesque. Fringilla ut morbi tincidunt augue interdum velit euismod in. Laoreet id donec ultrices tincidunt arcu non sodales neque. Enim diam vulputate ut pharetra sit amet aliquam id.
-                        <br><br>
-                        Vitae elementum curabitur vitae nunc sed velit dignissim sodales. Tincidunt augue interdum velit euismod in pellentesque massa. Habitant morbi tristique senectus et netus et malesuada fames ac. Quam vulputate dignissim suspendisse in est. Vitae congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque. Sapien faucibus et molestie ac feugiat sed lectus vestibulum. Id eu nisl nunc mi. Commodo odio aenean sed adipiscing. Porta non pulvinar neque laoreet suspendisse interdum. Sodales ut etiam sit amet. Pharetra convallis posuere morbi leo urna. Non quam lacus suspendisse faucibus interdum. Vulputate enim nulla aliquet porttitor lacus luctus accumsan. Amet consectetur adipiscing elit ut aliquam purus sit amet. Et netus et malesuada fames ac turpis egestas. Urna id volutpat lacus laoreet non curabitur gravida.
-                        <br><br>
-                        Purus in mollis nunc sed id semper risus. Viverra nibh cras pulvinar mattis. Proin sagittis nisl rhoncus mattis rhoncus urna. Id diam maecenas ultricies mi eget mauris pharetra. Aliquam vestibulum morbi blandit cursus. Id neque aliquam vestibulum morbi. Praesent elementum facilisis leo vel fringilla. Sapien nec sagittis aliquam malesuada. Vitae et leo duis ut diam quam nulla porttitor. Auctor neque vitae tempus quam pellentesque nec. Ut lectus arcu bibendum at varius vel pharetra vel. Gravida in fermentum et sollicitudin ac orci phasellus. Vulputate enim nulla aliquet porttitor lacus luctus. Massa tempor nec feugiat nisl pretium.
-                    </div>
+            <div id = "mediaSection" class = "container-fluid">
+                <h2 class = "section-header mt-4">Feeding Video Playlist</h2>
+
+                <div class = "text-center mb-4">
+                    Add text-blurb here about Feeding Instructions, or something like that.<br>
+                    Be sure to follow us on our 
+                    <span>
+                        <a class = "text-decoration-none yt-red" target = "_blank" href = "#" rel = "noopener norferrer">
+                            <i class = "fab fa-youtube"></i>
+                            <span class = "sr-only">Willow's Reef YouTube Link</span>
+                            channel
+                        </a>
+                    </span>
+                    for more quality content!
                 </div>
+
+                <iframe id = "videoPlayer" width = "900" height = "506" src = "https://www.youtube.com/embed/0-DltKVsRrA?list=PLBX8Md3S4qloWrm0C82lGXannR7b3WUmc" title = "YouTube video player" frameborder = "0" allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
             <span class = "anchor" id = "contactAnch">&nbsp;</span>
