--- a/community-images.html
+++ b/community-images.html
@@ -157,7 +157,7 @@
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
-            <div id = "aboutSection" class = "container-fluid">
+            <div id = "mediaSection" class = "container-fluid">
                 <div class = "row justify-content-center mt-4">
                     <h2 class = "section-header">PLACEHOLDER PAGE</h2>
                     
