--- a/feeding-vids.html
+++ b/feeding-vids.html
@@ -166,8 +166,7 @@
                     <span>
                         <a class = "text-decoration-none yt-red" target = "_blank" href = "#" rel = "noopener norferrer">
                             <i class = "fab fa-youtube"></i>
-                            <span class = "sr-only">Willow's Reef YouTube Link</span>
-                            channel
+                            YouTube channel
                         </a>
                     </span>
                     for more quality content!
