--- a/community-images.html
+++ b/community-images.html
@@ -171,7 +171,9 @@
                     </div>
                     <div style = "text-align: center; padding: 3rem; background: rgba(0,0,0,.8); color: #fff; margin: 0 auto; margin-top: 2rem; max-width: 100%; text-transform: uppercase;">
                         This section will include a cool gallery with the images lined up. When a user clicks an image, it will expand
-                        into an image viewer on the page. Something like this: 
+                        into an image viewer on the page. 
+                        <br><br>
+                        Something like this: 
                         <a style = "color: #fff; text-decoration: none; border: .1rem solid #fff; padding: .25rem; border-radius: 30rem; " href = "https://photoswipe.com/" target = "_blank">PhotoSwipe</a>
                     </div>
                 </div>
