--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -4,7 +4,7 @@
 <html lang = "en">
     <head>
         <meta charset = "UTF-8">
-        <title>Willow's Reef | Home</title>
+        <title>Willow's Reef | Products</title>
         <link rel = "shortcut icon" type = "image/ico" href = "images/ico/favicon.ico"/>
         <meta name = "viewport" content = "width = device-width, initial-scale = 1">
         
@@ -43,73 +43,11 @@
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
-            <div id = "topSection" class = "container-fluid d-flex align-items-center justify-content-center">
-                <div class = "row" data-aos = "fade-up" data-aos-once = "true">
-                    <h1>
-                        Welcome to Willow's Reef
-                    </h1>
-
-                    <div class = "section-content">
-                        We are an interconnected group of aquarium hobbyists looking <br class = "desktop-only">
-                        to grow the hobby and to provide top-quality products to people like us!
-                    </div>
-
-                    <a href = "/Willows-Reef-Mock-Up/about-page.html" class = "link-button">
-                        Learn More
-                    </a>
-                </div>
-            </div>
-
-            <div id = "customerSection" class = "container-fluid">
-                <div class = "row">
-                    <div class = "customer-content-1 col-md-6">
-                        <h2 class = "section-header">Community Images</h2>
-                        We love when customers submit their images.<br>
-                        Send us your tank pictures and get featured on our website!<br>
-                        Submit us your photos on our Facebook page:
-                        <a class = "text-decoration-none social-link" target = "_blank" href = "https://www.facebook.com/WillowsReef/" rel = "noopener norferrer">
-                            <i class = "fab fa-facebook"></i> Willow's Reef LLC
-                            <span class = "sr-only">Willow's Reef Facebook Link</span>
-                        </a>
-                        Tag us in your posts <b>@WillowsReef</b> or <b>#coralfeast</b>
-
-                        <a href = "/Willows-Reef-Mock-Up/community-images.html" class = "link-button">
-                            View More
-                        </a>
-                    </div>
-                    <div class = "customer-content-2 col-md-6">
-                        <div id = "customerCarousel" class = "carousel slide" data-bs-ride = "carousel">
-                            <ol class = "carousel-indicators">
-                                <button data-bs-target = "#customerCarousel" data-bs-slide-to = "0" class = "active"></button>
-                                <button data-bs-target = "#customerCarousel" data-bs-slide-to = "1"></button>
-                                <button data-bs-target = "#customerCarousel" data-bs-slide-to = "2"></button>
-                            </ol>
-                            <div class = "carousel-inner">
-                                <div class = "carousel-item active">
-                                    <div class = "slide-img-container">
-                                        <img class = "" src = "images/jpg/customer-images/customer-img-1.jpg" alt = "First slide">
-                                    </div>
-                                </div>
-                                <div class = "carousel-item">
-                                    <div class = "slide-img-container">
-                                        <img class = "" src = "images/jpg/customer-images/customer-img-2.jpg" alt = "First slide">
-                                    </div>                                </div>
-                                <div class = "carousel-item">
-                                    <div class = "slide-img-container">
-                                        <img class = "" src = "images/jpg/customer-images/customer-img-3.jpg" alt = "First slide">
-                                    </div>                                
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <span class = "anchor" id = "productAnch">&nbsp;</span>
-            <div id = "productSection" class = "container-fluid">
-                <h2 class = "section-header">Product List</h2>
+            <div id = "productSection" class = "container-fluid mt-3">
+                <h2 class = "section-header">Wholesale Products</h2>
+                <!--
                 <div class = "row justify-content-center">
-                    <div class = "product-container col-lg d-flex flex-column" data-aos = "flip-right" data-aos-once = "true">
+                    <div class = "product-container col-lg d-flex flex-column">
 
                         <div class = "product-img" id = "coralFeast">
                             &nbsp;
@@ -128,7 +66,7 @@
                             Learn More
                         </a>
                     </div>
-                    <div class = "product-container col-lg offset-lg-1 d-flex flex-column" data-aos = "flip-right" data-aos-once = "true">
+                    <div class = "product-container col-lg offset-lg-1 d-flex flex-column">
                         <div class = "product-img" id = "aminoFeast">
                             &nbsp;
                         </div>
@@ -146,7 +84,7 @@
                             Learn More
                         </a>
                     </div>
-                    <div class = "product-container col-lg offset-lg-1 d-flex flex-column" data-aos = "flip-right" data-aos-once = "true">
+                    <div class = "product-container col-lg offset-lg-1 d-flex flex-column">
                         <div class = "product-img" id = "rhodoFeast">
                             &nbsp;
                         </div>
@@ -166,16 +104,39 @@
                     </div>
                 </div>
 
-                <div class = "row justify-content-center">
-                    <a class = "link-button view-all" href = "/Willows-Reef-Mock-Up/products-page.html">
-                        View All
-                    </a>
+                <div class = "row justify-content-center mt-5">
+                    <div class = "product-container col-lg d-flex flex-column">
+                        <div class = "product-img" id = "frozenFeast">
+                            &nbsp;
+                        </div>
+
+                        <div class = "product-info">
+                            <div class = "product-name">
+                                FrozenFeast
+                            </div>
+
+                            Now taking orders for our all new FrozenFeast. Please ask your LFS to reach out to us or 
+                            send us an email at <a href = "mailto:info@willowsreef.com?subject=Frozenfreast%20Pre%20Order" target = "_blank">info@willowsreef.com</a>.You can always let us know the shops you visit frequently, and we 
+                            can reach out to them directly. 
+                        </div>
+
+                        <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/frozen-feast.html">
+                            Learn More
+                        </a>
+                    </div>
+                    <div class = "product-container col-lg offset-lg-1 d-flex flex-column invisible" data-aos = "flip-right" data-aos-once = "true">
+                        &nbsp;
+                    </div>
+                    <div class = "product-container col-lg offset-lg-1 d-flex flex-column invisible" data-aos = "flip-right" data-aos-once = "true">
+                        &nbsp;
+                    </div>
                 </div>
+                -->
             </div>
         </div>
 
         <div id = "globalFooter">&nbsp;</div>
-        
+
     </body>
 
     <!-- Custom Site JS -->
