--- a/community-images.html
+++ b/community-images.html
@@ -37,121 +37,7 @@
             <span class = "sr-only">Back to Top</span>
         </button>
 
-        <!-- Site Header -->
-        <header>
-            <!-- Header Navigation -->
-            <nav class = "navbar navbar-expand-lg">
-                <div class = "container-fluid">
-                   
-                    <a href = "/Willows-Reef-Mock-Up" class = "logo-link">
-                        <img id = "siteLogo" alt = "Willow's Reef | Home" src = "images/png/willows-reef-icon.png">
-                        <span class = "logo-link-text">
-                            Willow's Reef
-                        </span>
-                    </a>
-
-                    <button class = "hamburger navbar-toggler" type = "button" data-bs-toggle = "collapse" data-bs-target = "#mobileNav" aria-controls = "mobileNav" aria-expanded = "false" aria-label = "Toggle mobile navigation">
-                        <div class = "bar1"></div>
-                        <div class = "bar2"></div>
-                        <div class = "bar3"></div>
-                    </button>
-
-                    <!-- Header Navigation for Mobile Devices -->
-                    <div class = "collapse" id = "mobileNav">
-                        <ul class = "navbar-nav">
-                            <li class = "nav-item">
-                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up"> Home </a>
-                            </li>
-                            <li class = "nav-item">
-                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html"> Products </a>
-                            </li>
-                            <li class = "nav-item">
-                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/stores-page.html"> Stores </a>
-                            </li>
-                            <span class = "dropdown">
-                                <button class = "dropdown-toggle" type = "button" id = "mediaTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
-                                    Media 
-                                </button>
-                                <ul class = "dropdown-menu" aria-labelledby = "mediaTab">
-                                    <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/blog.html" id = "mediaTab"> Blog </a>
-                                    </li>
-                                    <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/community-images.html" id = "mediaTab"> Community Images </a>
-                                    </li>
-                                    <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/feeding-vids.html" id = "mediaTab"> Feeding Videos </a>
-                                    </li>
-                                </ul>
-                            </span>
-                            <li class = "nav-item">
-                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/about-page.html"> About Us </a>
-                            </li>
-                            <li class = "nav-item">
-                                <a class = "nav-link" href = "#contactAnch"> Contact Us </a>
-                            </li>
-                        </ul>
-                        <div class = "social-line">
-                            <span>
-                                <a class = "text-decoration-none social-icon" target = "_blank" href = "https://www.facebook.com/WillowsReef/" rel = "noopener norferrer">
-                                    <i class = "fab fa-facebook"></i>
-                                    <span class = "sr-only">Willow's Reef Facebook Link</span>
-                                </a>
-                            </span>
-                            <span>
-                                <a class = "text-decoration-none social-icon" target = "_blank" href = "https://www.instagram.com/willowsreef/" rel = "noopener norferrer">
-                                    <i class = "fab fa-instagram"></i>
-                                    <span class = "sr-only">Willow's Reef Instagram Link</span>
-                                </a>
-                            </span>
-                            <span>
-                                <a class = "text-decoration-none social-icon" target = "_blank" href = "#" rel = "noopener norferrer">
-                                    <i class = "fab fa-youtube"></i>
-                                    <span class = "sr-only">Willow's Reef YouTube Link</span>
-                                </a>
-                            </span>
-                        </div>
-                    </div>
-
-                    <!-- Header Navigation for Desktop Devices -->
-                    <div class = "" id = "desktopNav">
-                        <ul class = "navbar-nav align-items-center">
-                            <li class = "nav-item">
-                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up"> Home </a>
-                            </li>
-                            <li class = "nav-item">
-                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html"> Products </a>
-                            </li>
-                            <li class = "nav-item">
-                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/stores-page.html"> Stores </a>
-                            </li>
-                            <span class = "dropdown">
-                                <button class = "dropdown-toggle" type = "button" id = "mediaTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
-                                    Media 
-                                </button>
-                                <ul class = "dropdown-menu" aria-labelledby = "mediaTab">
-                                    <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/blog.html" id = "mediaTab"> Blog </a>
-                                    </li>
-                                    <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/community-images.html" id = "mediaTab"> Community Images </a>
-                                    </li>
-                                    <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/feeding-vids.html" id = "mediaTab"> Feeding Videos </a>
-                                    </li>
-                                </ul>
-                            </span>
-                            <li class = "nav-item">
-                                <a class = "nav-link" href = "/Willows-Reef-Mock-Up/about-page.html"> About Us </a>
-                            </li>
-                            <li class = "nav-item">
-                                <a class = "nav-link" href = "#contactAnch"> Contact Us </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
+        <div id = "globalHeader">&nbsp;</div>
 
         <div id = "pageContent" class = "">
             <!-- Overlay for Mobile Dropdown -->
@@ -178,74 +64,9 @@
                     </div>
                 </div>
             </div>
-
-            <span class = "anchor" id = "contactAnch">&nbsp;</span>
-            <div id = "contactSection" class = "container-fluid">
-                <section class = "contact aos-init aos-animate" data-aos = "fade-up" data-aos-once = "true" id = "contact">
-                    <div class = "contactContainer wrapper justify-content-center">
-                        <div class = "row">
-                            <div class = "contactInformation">
-                                <h2 class = "section-header">Get In Touch</h2>
-                                <p>
-                                    Have any questions or suggestions? Please reach out! We love to hear from our fellow aquarium
-                                    hobbyists.
-                                </p>
-                            </div>
-    
-                            <div class = "contactForm">
-                                <form name = "contact" method = "POST" action = "message-retrieval.php">
-                                    <input type = "hidden" name = "form-name" value = "contact">
-                                    <div class = "row">
-                                        <div class = "col-md">
-                                            <input type = "text" name = "name" id = "name" placeholder = "Name" autocomplete = "off" required = "true">
-                                        </div>
-                                        <div class = "col-md">
-                                            <input type = "email" name = "email" id = "email" placeholder = "E-mail" required = "true">
-                                        </div>
-                                    </div>
-                                    <textarea name = "message" id = "message" placeholder = "Message" required = "true"></textarea>
-                                    <div class = "submit-container">
-                                        <button name = "send" type = "submit" value = "Submit"> Submit </button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-            </div>
         </div>
 
-        <!-- Site Footer -->
-        <footer>
-            <div>
-                <span>
-                    <a class = "text-decoration-none" target = "_blank" href = "https://www.facebook.com/WillowsReef/" rel = "noopener norferrer">
-                        <i class = "fab fa-facebook"></i>
-                        <span class = "sr-only">Willow's Reef Facebook Link</span>
-                    </a>
-                </span>
-                <span>
-                    <a class = "text-decoration-none" target = "_blank" href = "https://www.instagram.com/willowsreef/" rel = "noopener norferrer">
-                        <i class = "fab fa-instagram"></i>
-                        <span class = "sr-only">Willow's Reef Instagram Link</span>
-                    </a>
-                </span>
-                <span>
-                    <a class = "text-decoration-none" target = "_blank" href = "#" rel = "noopener norferrer">
-                        <i class = "fab fa-youtube"></i>
-                        <span class = "sr-only">Willow's Reef YouTube Link</span>
-                    </a>
-                </span>
-            </div>
-            <div class = "footer-copyright">
-                &copy; 2021 Willow's Reef. 
-                <div class = "w-100"></div>
-                All Rights Reserved.
-                <!-- Force next columns to break to new line -->
-                <!--
-                Sergio Pacheco-->
-            </div>
-        </footer>
+        <div id = "globalFooter">&nbsp;</div>
 
     </body>
 
