--- a/global-header.html
+++ b/global-header.html
@@ -1,4 +1,6 @@
         <script>
+            const pageBody = document.body;
+            const screenOverlay = document.getElementById("screenOverlay");
             $(".hamburger").click(function () 
             {
             $(".hamburger").toggleClass("active");
