--- a/global-footer.html
+++ b/global-footer.html
@@ -49,7 +49,7 @@
         </a>
     </span>
     <span>
-        <a class = "text-decoration-none" target = "_blank" href = "#" rel = "noopener norferrer">
+        <a class = "text-decoration-none" target = "_blank" href = "https://www.youtube.com/channel/UCTXiB_prj_rgMFAIBdVbURg" rel = "noopener norferrer">
             <i class = "fab fa-youtube"></i>
             <span class = "sr-only">Willow's Reef YouTube Link</span>
         </a>
