--- a/global-header.html
+++ b/global-header.html
@@ -3,13 +3,13 @@
             const screenOverlay = document.getElementById("screenOverlay");
             $(".hamburger").click(function () 
             {
-            $(".hamburger").toggleClass("active");
-            screenOverlay.classList.toggle("active");
-            pageBody.classList.toggle("no-scroll");
+                $(".hamburger").toggleClass("active");
+                screenOverlay.classList.toggle("active");
+                pageBody.classList.toggle("no-scroll");
             });
             $("#mobileNav .nav-link").click(function () 
             {
-            $(".hamburger").click();
+                $(".hamburger").click();
             });
         </script>
         <!-- Site Header -->
@@ -95,7 +95,7 @@
                                 </a>
                             </span>
                             <span>
-                                <a class = "text-decoration-none social-icon" target = "_blank" href = "#" rel = "noopener norferrer">
+                                <a class = "text-decoration-none social-icon" target = "_blank" href = "https://www.youtube.com/channel/UCTXiB_prj_rgMFAIBdVbURg" rel = "noopener norferrer">
                                     <i class = "fab fa-youtube"></i>
                                     <span class = "sr-only">Willow's Reef YouTube Link</span>
                                 </a>
