--- a/feeding-vids.html
+++ b/feeding-vids.html
@@ -50,7 +50,7 @@
                     Add text-blurb here about Feeding Instructions, or something like that.<br>
                     Be sure to follow us on our 
                     <span>
-                        <a class = "text-decoration-none yt-red" target = "_blank" href = "#" rel = "noopener norferrer">
+                        <a class = "text-decoration-none yt-red" target = "_blank" href = "https://www.youtube.com/channel/UCTXiB_prj_rgMFAIBdVbURg" rel = "noopener norferrer">
                             <i class = "fab fa-youtube"></i>
                             YouTube channel
                         </a>
