--- a/global-header.html
+++ b/global-header.html
@@ -48,10 +48,10 @@
                                 </button>
                                 <ul class = "dropdown-menu" aria-labelledby = "productTab">
                                     <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html" id = "mediaTab"> Individual Items </a>
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html"> Individual Items </a>
                                     </li>
                                     <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/wholesale-page.html" id = "mediaTab"> Wholesale </a>
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/wholesale-page.html"> Wholesale </a>
                                     </li>
                                 </ul>
                             </span>
@@ -64,13 +64,13 @@
                                 </button>
                                 <ul class = "dropdown-menu" aria-labelledby = "mediaTab">
                                     <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/blog.html" id = "mediaTab"> Blog </a>
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/blog.html"> Blog </a>
                                     </li>
                                     <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/community-images.html" id = "mediaTab"> Community Images </a>
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/community-images.html"> Community Images </a>
                                     </li>
                                     <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/feeding-vids.html" id = "mediaTab"> Feeding Videos </a>
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/feeding-vids.html"> Feeding Videos </a>
                                     </li>
                                 </ul>
                             </span>
@@ -120,10 +120,10 @@
                                 </button>
                                 <ul class = "dropdown-menu" aria-labelledby = "productTab">
                                     <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html" id = "mediaTab"> Individual Items </a>
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html"> Individual Items </a>
                                     </li>
                                     <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/wholesale-page.html" id = "mediaTab"> Wholesale </a>
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/wholesale-page.html"> Wholesale </a>
                                     </li>
                                 </ul>
                             </span>
@@ -136,13 +136,13 @@
                                 </button>
                                 <ul class = "dropdown-menu" aria-labelledby = "mediaTab">
                                     <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/blog.html" id = "mediaTab"> Blog </a>
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/blog.html"> Blog </a>
                                     </li>
                                     <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/community-images.html" id = "mediaTab"> Community Images </a>
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/community-images.html"> Community Images </a>
                                     </li>
                                     <li class = "nav-item">
-                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/feeding-vids.html" id = "mediaTab"> Feeding Videos </a>
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/feeding-vids.html"> Feeding Videos </a>
                                     </li>
                                 </ul>
                             </span>
